@@ -5,25 +5,25 @@
 #include <stdio.h>
 #include <errno.h>
 
-static const char* MFILE = "IO/File.c";
+static const char* FILE_NAME = "IO/File.c";
 
 int32_t SPVM__IO__File__init_constant_values(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t e;
   
   
-  env->set_class_var_int_by_name(env, stack, "IO::File", "$SEEK_SET", SEEK_SET, &e, MFILE, __LINE__);
+  env->set_class_var_int_by_name(env, stack, "IO::File", "$SEEK_SET", SEEK_SET, &e, FILE_NAME, __LINE__);
   if (e) { return e; }
-  env->set_class_var_int_by_name(env, stack, "IO::File", "$SEEK_CUR", SEEK_CUR, &e, MFILE, __LINE__);
+  env->set_class_var_int_by_name(env, stack, "IO::File", "$SEEK_CUR", SEEK_CUR, &e, FILE_NAME, __LINE__);
   if (e) { return e; }
-  env->set_class_var_int_by_name(env, stack, "IO::File", "$SEEK_END", SEEK_END, &e, MFILE, __LINE__);
+  env->set_class_var_int_by_name(env, stack, "IO::File", "$SEEK_END", SEEK_END, &e, FILE_NAME, __LINE__);
   if (e) { return e; }
 
-  env->set_class_var_int_by_name(env, stack, "IO::File", "$STDIN", fileno(stdin), &e, MFILE, __LINE__);
+  env->set_class_var_int_by_name(env, stack, "IO::File", "$STDIN", fileno(stdin), &e, FILE_NAME, __LINE__);
   if (e) { return e; }
-  env->set_class_var_int_by_name(env, stack, "IO::File", "$STDOUT", fileno(stdout), &e, MFILE, __LINE__);
+  env->set_class_var_int_by_name(env, stack, "IO::File", "$STDOUT", fileno(stdout), &e, FILE_NAME, __LINE__);
   if (e) { return e; }
-  env->set_class_var_int_by_name(env, stack, "IO::File", "$STDERR", fileno(stderr), &e, MFILE, __LINE__);
+  env->set_class_var_int_by_name(env, stack, "IO::File", "$STDERR", fileno(stderr), &e, FILE_NAME, __LINE__);
   if (e) { return e; }
     
   return 0;
@@ -37,7 +37,7 @@ int32_t SPVM__IO__File__readline(SPVM_ENV* env, SPVM_VALUE* stack) {
   void* obj_self = stack[0].oval;
   
   // File fh
-  void* obj_io_file = env->get_field_object_by_name(env, stack, obj_self, "IO::File", "fh", "IO::FileHandle", &e, MFILE, __LINE__);
+  void* obj_io_file = env->get_field_object_by_name(env, stack, obj_self, "IO::File", "fh", "IO::FileHandle", &e, FILE_NAME, __LINE__);
   if (e) { return e; }
 
   FILE* fh = (FILE*)env->get_pointer(env, stack, obj_io_file);
@@ -116,7 +116,7 @@ int32_t SPVM__IO__File__read(SPVM_ENV* env, SPVM_VALUE* stack) {
   void* obj_self = stack[0].oval;
   
   // File fh
-  void* obj_io_file = env->get_field_object_by_name(env, stack, obj_self, "IO::File", "fh", "IO::FileHandle", &e, MFILE, __LINE__);
+  void* obj_io_file = env->get_field_object_by_name(env, stack, obj_self, "IO::File", "fh", "IO::FileHandle", &e, FILE_NAME, __LINE__);
   if (e) { return e; }
 
   FILE* fh = (FILE*)env->get_pointer(env, stack, obj_io_file);
@@ -150,7 +150,7 @@ int32_t SPVM__IO__File__print(SPVM_ENV* env, SPVM_VALUE* stack) {
   void* obj_self = stack[0].oval;
   
   // File fh
-  void* obj_io_file = env->get_field_object_by_name(env, stack, obj_self, "IO::File", "fh", "IO::FileHandle", &e, MFILE, __LINE__);
+  void* obj_io_file = env->get_field_object_by_name(env, stack, obj_self, "IO::File", "fh", "IO::FileHandle", &e, FILE_NAME, __LINE__);
   if (e) { return e; }
 
 
@@ -165,18 +165,18 @@ int32_t SPVM__IO__File__print(SPVM_ENV* env, SPVM_VALUE* stack) {
   if (string_length > 0) {
     int32_t write_length = fwrite(bytes, 1, string_length, fh);
     if (write_length != string_length) {
-      return env->die(env, stack, "Can't print string to file handle", MFILE, __LINE__);
+      return env->die(env, stack, "Can't print string to file handle", FILE_NAME, __LINE__);
     }
   }
 
   // Flush buffer to file handle if auto flush is true
-  int8_t auto_flush = env->get_field_byte_by_name(env, stack, obj_self, "IO::File", "auto_flush", &e, MFILE, __LINE__);
+  int8_t auto_flush = env->get_field_byte_by_name(env, stack, obj_self, "IO::File", "auto_flush", &e, FILE_NAME, __LINE__);
   if (e) { return e; }
 
   if (auto_flush) {
     int32_t ret = fflush(fh);//IO::File::print (Don't remove this comment for tests)
     if (ret != 0) {
-      return env->die(env, stack, "Can't flush buffer to file handle", MFILE, __LINE__);
+      return env->die(env, stack, "Can't flush buffer to file handle", FILE_NAME, __LINE__);
     }
   }
   
@@ -232,7 +232,7 @@ int32_t SPVM__IO__File__open(SPVM_ENV* env, SPVM_VALUE* stack) {
     valid_mode = 0;
   }
   if (!valid_mode) {
-    return env->die(env, stack, "Invalid open mode %s", mode, MFILE, __LINE__);
+    return env->die(env, stack, "Invalid open mode %s", mode, FILE_NAME, __LINE__);
   }
   
   errno = 0;
@@ -247,7 +247,7 @@ int32_t SPVM__IO__File__open(SPVM_ENV* env, SPVM_VALUE* stack) {
     void* obj_fh = env->new_pointer_by_name(env, stack, "IO::FileHandle", fh, &e, __FILE__, __LINE__);
     if (e) { return e; }
 
-    env->set_field_object_by_name(env, stack, obj_io_file, "IO::File", "fh", "IO::FileHandle", obj_fh, &e, MFILE, __LINE__);
+    env->set_field_object_by_name(env, stack, obj_io_file, "IO::File", "fh", "IO::FileHandle", obj_fh, &e, FILE_NAME, __LINE__);
     if (e) { return e; }
     
     stack[0].oval = obj_io_file;
@@ -255,7 +255,7 @@ int32_t SPVM__IO__File__open(SPVM_ENV* env, SPVM_VALUE* stack) {
   else {
     const char* errstr = strerror(errno);
     
-    return env->die(env, stack, "Can't open file \"%s\": %s", file_name, errstr, MFILE, __LINE__);
+    return env->die(env, stack, "Can't open file \"%s\": %s", file_name, errstr, FILE_NAME, __LINE__);
   }
   
   return 0;
@@ -269,7 +269,7 @@ int32_t SPVM__IO__File__flush(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   // File fh
   int32_t e;
-  void* obj_io_file = env->get_field_object_by_name(env, stack, obj_self, "IO::File", "fh", "IO::FileHandle", &e, MFILE, __LINE__);
+  void* obj_io_file = env->get_field_object_by_name(env, stack, obj_self, "IO::File", "fh", "IO::FileHandle", &e, FILE_NAME, __LINE__);
   if (e) { return e; }
 
   FILE* fh = (FILE*)env->get_pointer(env, stack, obj_io_file);
@@ -277,7 +277,7 @@ int32_t SPVM__IO__File__flush(SPVM_ENV* env, SPVM_VALUE* stack) {
   int32_t ret = fflush(fh);//IO::File::flush (Don't remove this comment for tests)
   
   if (ret != 0) {
-    return env->die(env, stack, "Can't flash to file", MFILE, __LINE__);
+    return env->die(env, stack, "Can't flash to file", FILE_NAME, __LINE__);
   }
   
   return 0;
@@ -288,13 +288,13 @@ int32_t SPVM__IO__File__unlink(SPVM_ENV* env, SPVM_VALUE* stack) {
 
   // File
   void* obj_file = stack[0].oval;
-  if (!obj_file) { return env->die(env, stack, "File name must be defined", MFILE, __LINE__); }
+  if (!obj_file) { return env->die(env, stack, "File name must be defined", FILE_NAME, __LINE__); }
   const char* file = (const char*)env->get_elems_byte(env, stack, obj_file);
   
   int32_t ret = remove(file);
   
   if (ret != 0) {
-    return env->die(env, stack, "Can't remove file %s", file, MFILE, __LINE__);
+    return env->die(env, stack, "Can't remove file %s", file, FILE_NAME, __LINE__);
   }
   
   return 0;
@@ -305,18 +305,18 @@ int32_t SPVM__IO__File__rename(SPVM_ENV* env, SPVM_VALUE* stack) {
 
   // Srouce src_file
   void* obj_src_file = stack[0].oval;
-  if (!obj_src_file) { return env->die(env, stack, "Source file name must be defined", MFILE, __LINE__); }
+  if (!obj_src_file) { return env->die(env, stack, "Source file name must be defined", FILE_NAME, __LINE__); }
   const char* src_file = (const char*)env->get_elems_byte(env, stack, obj_src_file);
 
   // Dist dist_file
   void* obj_dist_file = stack[1].oval;
-  if (!obj_dist_file) { return env->die(env, stack, "Dist file name must be defined", MFILE, __LINE__); }
+  if (!obj_dist_file) { return env->die(env, stack, "Dist file name must be defined", FILE_NAME, __LINE__); }
   const char* dist_file = (const char*)env->get_elems_byte(env, stack, obj_dist_file);
   
   int32_t ret = rename(src_file, dist_file);
   
   if (ret != 0) {
-    return env->die(env, stack, "Can't rename %s to %s", src_file, dist_file, MFILE, __LINE__);
+    return env->die(env, stack, "Can't rename %s to %s", src_file, dist_file, FILE_NAME, __LINE__);
   }
   
   return 0;
