@@ -1,4 +1,3 @@
 class IO::FileHandle : pointer_t {
-  
   native method DESTROY : void ();
 }
