@@ -1,3 +1,1 @@
-class IO::Handle {
-  
-}
+class IO::Handle;
