@@ -1,6 +1,8 @@
 0.08 2022-06-30
   [Test Fix]
     * Fix testing bug that occur upgrading to SPVM 0.9630.
+  [Improve Exception Messages]
+    * Improve IO::FileHandle exception messages.
 0.07 2022-06-30
   [New Features]
     * Add SPVM::IO::Handle module
